Closed Bug 149514 Opened 23 years ago Closed 23 years ago

drag and drop snapback goes to wrong place

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

VERIFIED FIXED
Future

People

(Reporter: tim1724, Assigned: sfraser_bugs)

References

Details

When you drag a link or an image from a web page and then drop it somewhere which isn't a valid drop target (menubar or window titlebar, for example) the outline snaps back to the original location as it should. almost. it actually snaps back to the wrong place. if it should go near the top of the screen, it goes to the bottom. if i should go towards the bottom, it heads for the top. It also briefly appears in the wrong place when you first start dragging, although it appears in the correct place while dragging it. It looks like the coordinate system is flipped the wrong way for part of the drawing. (my guess is that Chimera flips the coordinate space in the window to put the origin in the upper left, but you forget to flip it back when converting the position to screen coordinates, which have the origin in the lower left corner in Quartz)
low priority drag and drop bug
Assignee: saari → pinkerton
this is because the dnd stuff is still carbon, so the coordinate system is flipped from the surrounding cocoa coordinates. we'll have to rewrite the dnd system in cocoa to fix this.
Status: NEW → ASSIGNED
Target Milestone: --- → Future
*** Bug 153314 has been marked as a duplicate of this bug. ***
I have a fix
Assignee: pinkerton → sfraser
Status: ASSIGNED → NEW
I fixed this by adjusting the drag region to be in Quartz coordinates relative to the screen. May also fix some other mysterious Drag and Drop failures, and maybe even crashes.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified with 07-31 build on OS 10.1.5.
Status: RESOLVED → VERIFIED
Ack, i was looking for this bug earlier. We need to test this on a 2-screen machine; it doesn't work right there.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
changing GetMaxDevice to GetMainDevice fixes the offset problems on multiple monitors. fix checked into the chimera branch.
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
petersen, would you have a multiple monitors setup to verify this?
I would love to verify this bug but can't based on my video card (Gforce 2 mX TwinView). I could get a special adapter (ACD --> SVGA) that lets my connect a second SVGA monitor to my PowerMac. But the web site (Dr.Bott.com) states that it's incompatiable with my TwinView video card.
v on my dual-headed dual800
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.