Fixing bug 149514: make aborted drags zoom back to the correct place on screen, by fixing the coordinates of the drag to be in cocoa's global coordinate system.